--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(gridfun)
 export(hldepth)
 export(iter_matrix)
 export(loop)
+export(netRNA)
 export(rho_bounds)
 export(rmvbinary_EP)
 export(rmvbinary_QA)
@@ -32,7 +33,9 @@ importFrom(graphics,rect)
 importFrom(graphics,text)
 importFrom(mvtnorm,pmvnorm)
 importFrom(mvtnorm,rmvnorm)
+importFrom(netmeta,netmeta)
 importFrom(nlme,lme)
+importFrom(progress,progress_bar)
 importFrom(rgl,axes3d)
 importFrom(rgl,bg3d)
 importFrom(rgl,material3d)
